# sentinel

./: .gitignore  APPROACH.md  Makefile  README.md  config.bat  config.sh  index.html  package.json  setup.bat  setup.sh  tailwind.config.js
.github/workflows/: branch-rules.yml  ci.yml  publish-to-auto-release.yml  sniffer-actions.yml
ai-mod/: build.bat  build.sh  requirements.txt
ai-mod/src/: config.py  database.py  main.py  model.py  scheduler.py
ai-mod/src/data/: _info.md
ai-mod/src/data/day1-recon/: recon_log_20250304.txt
ai-mod/src/data/day2-dos/: dos_log_20250317.txt  dos_log_20250318.txt  win.csv
ai-mod/src/data/day2-recon/: recon_log_20250320.txt
ai-mod/src/data/day3-recon/: recon_log_20250321.txt
ai-mod/src/data/day4-recon/: recon_log_20250322.txt
ai-mod/src/models/: RandomForestClassifier.pkl  recondos_model_gnb.joblib  recondos_model_lr.joblib  scaler.joblib
ai-mod/src/tests/: test_database.py  test_main.py  test_model.py
data/: _info.md
docs/: APPROACH.md
ml-module/: main.py  requirements.txt
ml/database/: db.py
ml/models/: input.py
scripts/: config.bat  config.sh
scripts/attacks/: _info.md  day1.py  dos.py  dos.sh  recon.py  recon.sh
sniffer-mod/: CMakeLists.txt  sniffer  test
sniffer-mod/note/: ip.txt  tcp.md  tcp.txt  udp.md  udp.txt
sniffer-mod/src/: db.c  db.cpp  flow.cpp  ip.c  ip.cpp  main.c  main.cpp  packet.c  packet.cpp  prep.cpp  sniffer.c  sniffer.cpp
sniffer-mod/src/include/: db.h  flow.h  flow.hpp  ip.h  packet.h  prep.h  sniffer.h  sniffer.hpp
sniffer-mod/src/tests/: sniffer_tests.cpp  test.c  test.cpp
sniffer-module/: .clangd  sniffer  test
sniffer-module/src/: db.cpp  ip.cpp  main.cpp
sniffer-module/src/include/: db.h  flow.h
sniffer-module/src/tests/: test.cpp
src/: App.css  App.jsx  App.tsx  index.css  main.jsx
src-back/: go.mod  main.go
src-back/db/: db.go
src-back/executable/: invoke.go
src-go/: main.go
src-go/db/: db.go
src-go/executable/: invoke.go
src-go/handlers/: exec_handler.go
src-go/routes/: routes.go
src-go/tests/: db_test.go  executable_test.go  handlers_test.go
src-go/utils/: utils_unix.go  utils_windows.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: commands.rs  mod.rs
src-tauri/src/database/: db.rs  mod.rs  model.rs  schema.sql
src-tauri/src/database/migrations/: schema.sql
src-tauri/src/database/tests/: mod.rs
src-tauri/src/services/: capture.rs  mod.rs  packet_handler.rs
src-tauri/src/utils/: flow.rs  mod.rs
src/components/: FlowChart.tsx  FlowList.tsx  FlowsOverviewChart.tsx  FlowsRateOverviewChart.tsx  Header.tsx  ModuleStatCard.tsx  ProtocolDistributionChart.tsx  Sidebar.tsx  SnifferAiModChart.tsx  StatCard.tsx
src/components/flow/: AttackAlerts.jsx  FlowDetails.jsx  FlowSettings.jsx
src/components/homepage/: FlowChart.jsx  Homepage.jsx  PacketChart.jsx  StartCaptureButton.jsx
src/components/navbar/: Navbar.jsx
src/components/packet/: FlowDetails.jsx  FlowSettings.jsx  InspectorElement.jsx  PacketSettings.jsx
src/components/sidebar/: Sidebar.jsx  SidebarItem.jsx
src/hooks/: usePacketListener.js
src/pages/: DashboardPage.tsx  FlowInspector.jsx  Home.jsx  HomePage.tsx  InspectorPage.tsx  PacketInspector.jsx  SettingsPage.tsx
src/services/: packetCapture.js
src/styles/: App.css  Navbar.css
src/utils/: constants.js  formatPacketData.js  props.ts
