[package]
name = "sentinel"
version = "0.1.0"
description = "network flow visualizer with ML-based intrusion detection and alert system"
authors = ["tr41z"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.22"
env_logger = "0.11.5"
pnet = "0.35.0"
lazy_static = "1.5.0"
tokio = "1.40.0"
chrono = "0.4.38"
sqlx = {version = "0.8.2", default-features = false, features = ["runtime-async-std", "macros", "sqlite", "time"] }
async-std = "1.13.0"
dotenv = "0.15.0"
dirs = "5.0.1"
home = "0.5.9"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
